[metadata]
name = signal_grad_cam
version = 0.0.1
author = Samuele Pe
author_email = samuele.pe01@universitadipavia.it
description = SignalGrad-CAM aims at generalising Grad-CAM to one-dimensional applications, while enhancing usability and efficiency.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = xai, ai
url = https://github.com/samuelepe11/SignalGrad-CAM
project_urls =
    Bug Tracker = https://github.com/samuelepe11/SignalGrad-CAM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy >= 2.0.2
    matplotlib >= 3.9.2
	opencv-python >= 4.11.0.86
	torch >= 2.6.0
	keras >= 3.9.0
	tensorflow >= 2.19.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = src